--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -9,5 +9,12 @@
     <%= task.text_field :details, class: 'form-control' %>
   </div>
 
+  <% unless @task.new_record? %>
+  <div class="form-group">
+  <%= task.label :completed %>
+  <%= task.check_box :completed, class: 'form-check-label' %>
+  </div>
+  <% end %>
+
   <%= task.submit class: 'btn btn-primary' %>
 <% end %>
