--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,24 +1,7 @@
 <div class="container">
   <h1>Edit Task</h1>
 
-<%= form_for(@task) do |task| %>
-  <div class="form-group">
-    <%= task.label :title %>
-    <%= task.text_field :title, class: 'form-control' %>
-  </div>
-
-  <div class="form-group">
-    <%= task.label :details %>
-    <%= task.text_field :details, class: 'form-control' %>
-  </div>
-
-  <div class="form-group">
-  <%= task.label :completed %>
-  <%= task.check_box :completed, class: 'form-check-label' %>
-  </div>
-
-  <%= task.submit class: 'btn btn-primary' %>
-<% end %>
+  <%= render 'form', task: @task %>
 
 
 </div>
